--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,11 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.wrapper{
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background: rgb(180,58,160);
+  background: -moz-linear-gradient(90deg, rgba(180,58,160,0.9514399509803921) 28%, rgba(10,129,149,0.8870141806722689) 60%);
+  background: -webkit-linear-gradient(90deg, rgba(180,58,160,0.9514399509803921) 28%, rgba(10,129,149,0.8870141806722689) 60%);
+  background: linear-gradient(90deg, rgba(180,58,160,0.9514399509803921) 28%, rgba(10,129,149,0.8870141806722689) 60%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#b43aa0",endColorstr="#0a8195",GradientType=1);
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.table{
+  --bs-table-bg:tranparent;
 }
